k3s/telemetry/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: telemetry
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:10.4.2
        ports:
        - containerPort: 3000
          name: web
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - name: datasources-prov
          mountPath: /etc/grafana/provisioning/datasources
        - name: dashboards-prov
          mountPath: /etc/grafana/provisioning/dashboards
        - name: dashboard-json
          mountPath: /var/lib/grafana/dashboards
      volumes:
      - name: datasources-prov
        configMap:
          name: grafana-datasources
      - name: dashboards-prov
        configMap:
          name: grafana-dashboards-prov
      - name: dashboard-json
        configMap:
          name: grafana-dashboard-json
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: telemetry
  labels:
    app: grafana
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30000
    name: web
  selector:
    app: grafana
